# auhub

./: .gitignore  CMakeLists.txt  CMakePresets.json  readme.md  vcpkg.json
.github/workflows/: hosted-pure-workflow.yml
cursor/: cursor_cardplayer.md
examples/: CMakeLists.txt  test_card_progress.cc  test_local_file.cc  test_stream_file.cc
examples/py_stream_client/: audio_ws_client.py
examples/stream_audio_py_client/: microphone_ws_client.py
examples/ws_stream_player/: CMakeLists.txt  ws_stream_auido.cc  ws_stream_auido.h  ws_stream_player.cc
include/auhub/audio/: base.h  file_audio.h  stream_auido.h  ws_stream_auido.h
include/auhub/player/: base.h  base.hpp  blocking_value.hpp  card_player.h  play_progress.h  uart_player.h
src/audio/: file_audio.cc  stream_auido.cc  ws_stream_auido.cc
src/player/: base.cc  card_player.cc  uart_player.cc
test/: CMakeLists.txt  test_pa.cc
